sumo/tests/sumo/pedestrian_model/striping/errors/disconnected_route/errors.sumo
Warning: No connection between ':C_w1' and 'CW_bwd_connector' found.
Error: Disconnected walk for person 'p0'.
Quitting (on error).
